src/test/ui/rust-2018/uniform-paths/deadlock.stderr
error[E0432]: unresolved import
  --> $DIR/deadlock.rs:4:5
   |
LL | use foo::bar;
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
